--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,14 +12,14 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.3",
     "react-router-dom": "^6.26.1",
     "zod": "^3.23.8",
-    "zustand": "^4.5.5",
-    "@hookform/resolvers": "^3.9.0"
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.5.0",
@@ -35,6 +35,7 @@
     "jsdom": "^24.1.1",
     "prettier": "^3.3.3",
     "typescript": "^5.5.4",
+    "typescript-eslint": "^8.53.0",
     "vite": "^5.4.1",
     "vitest": "^2.0.5"
   }
