Require OTP verification after credential auth

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,16 @@
 DATABASE_URL=postgresql://user:password@localhost:5432/printform
-JWT_SECRET=super-secret
-JWT_REFRESH_SECRET=super-refresh-secret
+JWT_SECRET=replace-with-strong-32-char-secret
+JWT_REFRESH_SECRET=replace-with-strong-32-char-refresh-secret
+OTP_HASH_PEPPER=replace-with-strong-32-char-pepper
 FRONTEND_URL=http://localhost:5173
 PORT=4000
+NODE_ENV=development
+SMS_PROVIDER=mock
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_FROM=
+OTP_TTL_MINUTES=10
+OTP_COOLDOWN_SECONDS=60
+OTP_MAX_ATTEMPTS=5
+TURNSTILE_SECRET_KEY=
+TURNSTILE_SITE_KEY=
