--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-VITE_USE_MOCK=true
+VITE_USE_MOCK=false
 VITE_API_URL=http://localhost:4000
 VITE_YMAPS_API_KEY=a5997cf6-2585-4ad4-9dd7-ce9cd597fa95
