Add API-backed addresses, KYC admin, and payments

--- a/backend/.env
+++ b/backend/.env
@@ -8,7 +8,7 @@ FRONTEND_URL=http://localhost:5173
 PORT=4000
 NODE_ENV=development
 
-SMS_PROVIDER=mock
+SMS_PROVIDER=console
 OTP_TTL_MINUTES=10
 OTP_COOLDOWN_SECONDS=60
 OTP_MAX_ATTEMPTS=5
