--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,7 +5,7 @@ OTP_HASH_PEPPER=replace-with-strong-32-char-pepper
 FRONTEND_URL=http://localhost:5173
 PORT=4000
 NODE_ENV=development
-SMS_PROVIDER=mock
+SMS_PROVIDER=console
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_FROM=
