--- a/frontend/.env
+++ b/frontend/.env
@@ -8,11 +8,11 @@ FRONTEND_URL=http://localhost:5173
 PORT=4000
 NODE_ENV=development
 
-SMS_PROVIDER=mock
+SMS_PROVIDER=console
 OTP_TTL_MINUTES=10
 OTP_COOLDOWN_SECONDS=60
 OTP_MAX_ATTEMPTS=5
 
-VITE_USE_MOCK=true
+VITE_USE_MOCK=false
 VITE_API_URL=http://localhost:4000
 VITE_YMAPS_API_KEY=a5997cf6-2585-4ad4-9dd7-ce9cd597fa95
