--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "tsx prisma/seed.ts"
   },
   "scripts": {
     "dev": "tsx watch src/main.ts",
@@ -40,7 +40,7 @@
     "@types/node": "^25.1.0",
     "prisma": "^5.18.0",
     "ts-node": "^10.9.2",
-    "tsx": "^4.16.2",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
 }
