fix(shipment): restore explicit domain error codes in orchestrator

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,3 +14,6 @@ OTP_COOLDOWN_SECONDS=60
 OTP_MAX_ATTEMPTS=5
 TURNSTILE_SECRET_KEY=
 TURNSTILE_SITE_KEY=
+YANDEX_NDD_BASE_URL=https://b2b.taxi.tst.yandex.net
+YANDEX_NDD_TOKEN=
+YANDEX_NDD_LANG=ru
