--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "postinstall": "prisma generate",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "make:admin": "tsx scripts/make-admin.ts"
+    "make:admin": "tsx scripts/make-admin.ts",
+    "shipments:sync": "tsx scripts/shipments-sync.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.18.0",
