--- a/backend/.env
+++ b/backend/.env
@@ -12,3 +12,7 @@ SMS_PROVIDER=console
 OTP_TTL_MINUTES=10
 OTP_COOLDOWN_SECONDS=60
 OTP_MAX_ATTEMPTS=5
+
+YANDEX_NDD_BASE_URL=https://b2b.taxi.tst.yandex.net
+YANDEX_NDD_TOKEN=PASTE_YOUR_TOKEN_HERE
+YANDEX_NDD_LANG=ru
