Fix checkout PVZ selection with backend Yandex proxy and Leaflet modal map

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,3 +17,6 @@ TURNSTILE_SITE_KEY=
 YANDEX_NDD_BASE_URL=https://b2b.taxi.tst.yandex.net
 YANDEX_NDD_TOKEN=
 YANDEX_NDD_LANG=ru
+YANDEX_DELIVERY_MODE=TEST
+YANDEX_DELIVERY_HOST=https://b2b.taxi.tst.yandex.net
+YANDEX_DELIVERY_TOKEN=
