--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@types/leaflet": "^1.9.21",
     "clsx": "^2.1.1",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.3",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.1",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
