--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "@prisma/client": "^5.18.0",
     "axios": "^1.13.5",
     "bcryptjs": "^2.4.3",
+    "bwip-js": "^4.8.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -31,6 +32,7 @@
     "jsonwebtoken": "^9.0.2",
     "libphonenumber-js": "^1.11.10",
     "multer": "^1.4.5-lts.1",
+    "pdfkit": "^0.17.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -42,7 +44,10 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.12",
     "@types/node": "^25.1.0",
+    "@types/pdfkit": "^0.17.5",
+    "@types/supertest": "^6.0.3",
     "prisma": "^5.18.0",
+    "supertest": "^7.2.2",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
