лог с ошибкой NDD_OFFER_CREATE_FAILED

--- a/backend/.env
+++ b/backend/.env
@@ -16,3 +16,4 @@ OTP_MAX_ATTEMPTS=5
 YANDEX_NDD_BASE_URL=https://b2b.taxi.tst.yandex.net
 YANDEX_NDD_TOKEN=PASTE_YOUR_TOKEN_HERE
 YANDEX_NDD_LANG=ru
+YANDEX_NDD_PLATFORM_STATION_ID=fbed3aa1-2cc6-4370-ab4d-59c5cc9bb924
