Fix Yandex NDD offer flow with platform_station payload

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,6 +17,7 @@ TURNSTILE_SITE_KEY=
 YANDEX_NDD_BASE_URL=https://b2b.taxi.tst.yandex.net
 YANDEX_NDD_TOKEN=
 YANDEX_NDD_LANG=ru
+YANDEX_NDD_PLATFORM_STATION_ID=fbed3aa1-2cc6-4370-ab4d-59c5cc9bb924
 YANDEX_DELIVERY_MODE=TEST
 YANDEX_DELIVERY_HOST=https://b2b.taxi.tst.yandex.net
 YANDEX_DELIVERY_TOKEN=
