Harden Yandex NDD prod station id integration

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,3 @@
-
 DATABASE_URL=postgresql://user:password@localhost:5432/printform
 JWT_SECRET=replace-with-strong-32-char-secret
 JWT_REFRESH_SECRET=replace-with-strong-32-char-refresh-secret
@@ -15,10 +14,8 @@ OTP_COOLDOWN_SECONDS=60
 OTP_MAX_ATTEMPTS=5
 TURNSTILE_SECRET_KEY=
 TURNSTILE_SITE_KEY=
-YANDEX_NDD_BASE_URL=https://b2b.taxi.tst.yandex.net
+YANDEX_NDD_BASE_URL=https://b2b-authproxy.taxi.yandex.net
 YANDEX_NDD_TOKEN=
 YANDEX_NDD_LANG=ru
-YANDEX_NDD_PLATFORM_STATION_ID=fbed3aa1-2cc6-4370-ab4d-59c5cc9bb924
-YANDEX_DELIVERY_MODE=TEST
-YANDEX_DELIVERY_HOST=https://b2b.taxi.tst.yandex.net
+YANDEX_NDD_PLATFORM_STATION_ID=
 YANDEX_DELIVERY_TOKEN=
