Fix NDD dropoff station mapping to operator_station_id digits

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,6 +15,7 @@ OTP_MAX_ATTEMPTS=5
 TURNSTILE_SECRET_KEY=
 TURNSTILE_SITE_KEY=
 YANDEX_NDD_BASE_URL=https://b2b-authproxy.taxi.yandex.net
+# Token value only, without "Bearer " prefix
 YANDEX_NDD_TOKEN=
 YANDEX_NDD_LANG=ru
 YANDEX_NDD_PLATFORM_STATION_ID=
